--- a/team_stage/storyCard3.html
+++ b/team_stage/storyCard3.html
@@ -51,8 +51,8 @@
                 <div class="card-body">
                     <h5 class="card-title">${comment.name}</h5>
                     <p class="card-text">${comment.comment}</p>
-                    <button type="button" class="btn btn-outline-warning edit-btn">수정</button>
-                    <button type="button" class="btn btn-outline-danger delete-btn">삭제</button>
+                    <button type="button" class="btn btn-outline-primary edit-btn">수정</button>
+                    <button type="button" class="btn btn-primary delete-btn">삭제</button>
                 </div>
             </div>
         </div>`;
