--- a/team_stage/index.html
+++ b/team_stage/index.html
@@ -105,7 +105,7 @@
         <div class="main1-left">
           <img src="https://firebasestorage.googleapis.com/v0/b/our-stage.appspot.com/o/2%EC%A1%B0.png?alt=media&token=b2ba8639-4516-4e11-b091-e01c15e2eb3b" alt="사진첨부">
         </div>
-        <span class="main1-righzt">
+        <span class="main1-right">
           <h2 style="color:rgb(194, 186, 227)">Our_stage 2조</h2>
           <br>
           <details>
